--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,9 +1,7 @@
 ::home
 #hero_title
-The efficiency of one, the talent of three.
-Why look elsewhere?
+Welcome to the future
 
 #hero_subtitle
-Developer, art director and photographer, I fuse technicality and aestheticism to bring a unique dimension 
-to my work. Passionate about beauty, I give life to projects that captivate and convert
+Polybotic the discord bot that can bring something from another reality.
 ::
