--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -10,13 +10,13 @@ About
 A few words about me
 
 #intro
-Developer and art director based in Nice, France
+Introducing PolyBotic – Your Ultimate Discord Companion!
 
-With over 6 years of experience in the field, I enjoy blending beauty, design and technology to create unique, bespoke web experiences that exceed my clients' expectations.
+Looking to take your server to the next level? PolyBotic is here to help! With seamless OSU integration, you'll enjoy fun and interactive features for fans of the game. Keep your server organized with Mystaff, a powerful tool that tracks staff roles and activity. Plus, our Exaroton server integration and Steam integration make managing your gaming experience even easier.
 
-Whether collaborating with teams or leading design projects, my attention to detail and dedication to excellence have earned me a reputation for delivering exceptional results.
+But that’s not all – enjoy a variety of fun meme commands to keep the mood light and server-wide developer commands to help you manage your community like a pro.
 
-Even when I'm not working for my clients, I'm always looking for new things to learn and experiment with. I continue to develop my design and development skills by working on personal projects, reading books, etc...
+Ready to enhance your Discord server? Get PolyBotic today and start exploring all the amazing features!
 
 #experiences
   :::experiences
