--- a/content/en/5.contact.md
+++ b/content/en/5.contact.md
@@ -4,7 +4,7 @@ title: Contact
 
 ::contact
 #title
-Contact Me
+Contact Sunfall-Corps
 
 #subtitle
 Let's talk about your ideas, projects or anything else
